<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="#AECFEC"
    >


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="CLOCK"-->
            <!--android:gravity="center"-->
            <!--android:textSize="30sp"/>-->
        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Stop Clock"-->
            <!--android:layout_margin="8dp"-->
            <!--android:background="@color/colorAccent"/>-->

        <TextView
            android:id="@+id/periodLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>




    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/heading"
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="16dp">

            <TextView
                android:id="@+id/homeTeamLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp"
                android:padding="8dp"
                android:textColor="@color/textColor"
                />
            <TextView
                android:id="@+id/homePowerPlayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/power_play"
                android:gravity="center_horizontal"
                android:textStyle="bold|italic"
                android:background="@color/colorAccent"
                android:textColor="@color/colorAccentLight"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/homeTeamScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize = "54sp"
                android:padding="8dp"
                android:text="0"
                android:textColor="@color/textColor"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/homeShotsOnGoalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:gravity="center"
                    android:textSize="54sp"
                    android:padding="8dp"
                    android:textColor="@color/textColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize = "16sp"
                    android:padding="4dp"
                    android:text="SHOTS\n ON\n GOAL"
                    android:lineSpacingExtra="1mm"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"/>



            </LinearLayout>




            <Button
                android:id="@+id/homeGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"/>
            <Button
                android:id="@+id/homeShotsOnGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shots_on_goal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/colorAccentLight"/>

            <Button
                android:id="@+id/homePowerPlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power_play"
            android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:onClick="startSlideDownAnimation"/>


        </LinearLayout>

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="8dp">

        </View>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="16dp">

            <TextView
                android:id="@+id/awayTeamLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/away"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp"
                android:padding="8dp"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/awayPowerPlayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/power_play"
                android:gravity="center_horizontal"
                android:textStyle="bold|italic"
                android:background="@color/colorAccent"
                android:textColor="@color/colorAccentLight"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/awayTeamScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize = "54sp"
                android:padding="8dp"
                android:text="0"
                android:textColor="@color/textColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/awayShotsOnGoalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:gravity="center"
                    android:textSize="54sp"
                    android:textColor="@color/textColor"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize = "16sp"
                    android:padding="4dp"
                    android:textColor="@color/textColor"
                    android:text="SHOTS\n ON\n GOAL"
                    android:textStyle="bold"
                    android:lineSpacingExtra="1mm"/>



            </LinearLayout>



            <Button
                android:id="@+id/awayGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"/>
            <Button
                android:id="@+id/awayShotsOnGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shots_on_goal"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccentLight"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/awayPowerPlayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/power_play"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"/>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/body"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodadd"
            android:layout_margin="8dp"
            android:background="@color/colorAccentLight"
            />

        <Button
            android:id="@+id/newGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"/>



    </LinearLayout>



</RelativeLayout>

    </ScrollView>
